--- a/views/cases.jade
+++ b/views/cases.jade
@@ -1,8 +1,7 @@
 #topleftdiv
 #cases
   img.control#newcase(src='/static/ico/plus_bw.png')
-  h1.damion.caseListTitle.orange Cases
-  input.rounded(type='text', name='filter', value='Type to filter', id='filter')
+  input.rounded#filter(type='text', name='filter', value='Type to filter')
   table#cases
     thead
       tr 
