--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -107,7 +107,7 @@ td.hovered
     color #666
 th
     line-height 250%
-    font-family "Orbitron" 
+    font-weight normal
 th.sortable
     cursor pointer
 th.sortable:hover
@@ -197,8 +197,10 @@ a
     top 5px
     left 5px
 .pageimage
-    width 30%
-    margin 1%
+    width 29%
+    margin-top 5% 
+    margin-left 2%
+    margin-right 2%
     cursor pointer
 #cheatsheet
     td,th
@@ -262,13 +264,12 @@ span#controls
     font-family helvetica, arial
     cursor pointer
 .big_logo
-    color #bca
-    font-family "Orbitron"
     font-weight bold
     font-size 50pt
     margin-top 50px
 .orbitron
     font-family "Orbitron"
+    color #bca
 .damion
     font-family "Damion"
     text-shadow #a00 0.5px -2px 5px
@@ -298,7 +299,7 @@ span#controls
     padding 8px
     border 2px
     border-style solid
-    border-color #aaa
+    border-color #bca
 #footer
     position relative
     margin-top -50px
