--- a/views/cases.jade
+++ b/views/cases.jade
@@ -4,7 +4,7 @@
   input.rounded#filter(type='text', name='filter', value='Type to filter')
   table#cases
     thead
-      tr 
+      tr.orbitron 
         //th.sortable Last Edit
         th.sortable Modalities
         th.sortable Area
