--- a/views/index.jade
+++ b/views/index.jade
@@ -1,6 +1,6 @@
 #indexpage
   br
-  .big_logo RADIOCA.SE
+  .big_logo.orbitron RADIOCA.SE
   br
   br
   img(src='/static/img/OldRadio_3_320.png', style='width: 320px')
