--- a/views/layout.jade
+++ b/views/layout.jade
@@ -32,32 +32,32 @@ html
         != body // this renders the body of an individual view
       #maximized
       #horizon
-        #newcase_dialog.dialog_box(style='display:none')
-          h5 Create new case <br> / Choose page layout for first page
+        #newcase_dialog.dialog_box.orbitron(style='display:none')
+          | Create new case <br><br> / Choose page layout for first page <br>
           #pagetype
             img.pageimage#casestandardpage(src='/static/img/standardpage.svg', alt='Standard')
             img.pageimage#casetextpage(src='/static/img/textpage.svg', alt='Textpage')
             img.pageimage#caseimagepage(src='/static/img/imagepage.svg', alt='Imagepage')
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
-        #newpage_dialog.dialog_box(style='display:none')
-          h5 Create new page <br> / Choose page layout
+        #newpage_dialog.dialog_box.orbitron(style='display:none')
+          | Create new page <br> / Choose page layout
           #pagetypes
             img.pageimage#newpage_standard(src='/static/img/standardpage.svg', alt='Standard')
             img.pageimage#newpage_text(src='/static/img/textpage.svg', alt='Textpage')
             img.pageimage#newpage_image(src='/static/img/imagepage.svg', alt='Imagepage')
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
-        #deletecase_dialog.dialog_box(style='display:none')
-          h5 Do you want to delete this case?
+        #deletecase_dialog.dialog_box.orbitron(style='display:none')
+          | Do you want to delete this case?
           br
           br
           button#deletecase_confirm(type='button')
             | Delete
           a.Cancel
             img.control(src="/static/ico/cross-circle_bw.png")
-        #boxit_dialog.dialog_box(style='display:none')
-          h5 Please check applicable language, modalities and areas
+        #boxit_dialog.dialog_box.orbitron(style='display:none')
+          | Please check applicable language, modalities and areas
           br
           br
           br
