--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -50,7 +50,7 @@
 #newcase
     position absolute
     top 15px
-    right 50%
+    left 50%
     margin-left -12px
 .maximizeradio, .minimizeradio
     position absolute
