--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -34,7 +34,7 @@ iframe.hidden(name="postframe", id="postframe", src="about:none")
   .txt
     textarea.mdtxt(style='display:none')
       ##{title}
-    .md
+    .md.gray
     img.control.textedit.session(src='/static/ico/pencil_bw.png')
 a#prevpage(href='/case/#{cid}/#{prevpage}')
   img(src='/static/ico/arrow-180.png')
