--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -110,6 +110,12 @@ th
     font-weight normal
 th.sortable
     cursor pointer
+    -webkit-touch-callout none
+    -webkit-user-select none
+    -khtml-user-select none
+    -moz-user-select none
+    -ms-user-select none
+    user-select none
 th.sortable:hover
     color white
 th.sorted-asc 
@@ -475,9 +481,8 @@ body
     line-height 1
     height 100%
     background-image url('/static/img/OffGray.jpg')
-h1, h2
-    color #ddd
-    font-weight 400
+.gray
+    color #aaa
 h1, h2, h3, h4, h5, p 
     margin-bottom 24px
     padding 0
@@ -493,13 +498,21 @@ h4
 h5 
     font-size 18px
 a:hover
-    text-shadow #ff6037 0px 0px 10px
+    text-shadow #ffcc00 0px 0px 10px
+    //text-shadow #ff9933 0px 0px 10px
 a 
+    text-shadow #222222 0px 0px 10px
     color #0099ff
     margin 0
     padding 0
     vertical-align baseline
     text-decoration none
+    -webkit-touch-callout none
+    -webkit-user-select none
+    -khtml-user-select none
+    -moz-user-select none
+    -ms-user-select none
+    user-select none
 ul, ol 
     padding 0
     margin 0
