--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -47,6 +47,13 @@
     position absolute
     top -12px
     left -24px
+#icd_req
+    width 80%
+#icd_res_wrap
+    overflow hidden
+#icd_res_box
+    overflow auto
+    max-height 100px
 #newcase
     position absolute
     top 15px
@@ -501,7 +508,6 @@ a:hover
     text-shadow #ffcc00 0px 0px 10px
     //text-shadow #ff9933 0px 0px 10px
 a 
-    text-shadow #222222 0px 0px 10px
     color #0099ff
     margin 0
     padding 0
