--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -48,7 +48,9 @@
     top -12px
     left -24px
 #icd_req
-    width 80%
+    width 60%
+    background-color #FFFFFF
+    color #000000
 #icd_res_box
     overflow auto
     max-height 100px
