--- a/views/layout.jade
+++ b/views/layout.jade
@@ -110,8 +110,9 @@ html
           #icd
           br
           form#icd_form
+            | Find ICD: 
             input#icd_req(type='text', name='icd')
-            img.control#chooseICD(src="/static/ico/ticksmall_bw.png")
+            img.control#chooseICD(src="/static/ico/smallplus_bw.png")
           br
           #icd_res_wrap
             #icd_res_box
