--- a/views/cases.jade
+++ b/views/cases.jade
@@ -26,7 +26,7 @@
                 td #{c.description}
                 td.title 
                   a(href='/case/#{c.cid}/#{c.firstpage}') #{c.title}
-                td.diagnosis.invisible #{c.icd}
+                td.diagnosis.invisible #{c.icds}
                 td.invisible
                   //a(href='https://twitter.com/intent/user?screen_name=#{c.creator}')
                   @#{c.creator}
