multiple ICD:s and texts

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -59,6 +59,10 @@
     top 15px
     left 50%
     margin-left -61px
+#addtext
+    float left
+    clear right
+    margin 20px 10px
 #newcase
     left 50%
     margin-top 10px
