--- a/views/textpage.jade
+++ b/views/textpage.jade
@@ -41,11 +41,14 @@ a#prevpage(href='/case/#{cid}/#{prevpage}')
 a#nextpage(href='/case/#{cid}/#{nextpage}')
   img(src='/static/ico/arrow.png')
 #texts(style='width: 100%')
-  .txt
-    textarea.mdtxt(style='display:none')
-      #{texts}
-    .md
-    img.control.textedit.session(src='/static/ico/pencil.png')
+  - each text in texts
+    a.toggletext Show/hide next text
+      .txt
+        textarea.mdtxt(style='display:none')
+          #{text.value}
+        .md
+        img.control.textedit.session(src='/static/ico/pencil.png')
+  img.control#addtext(style='display:none', src='/static/ico/plus_bw.png')
   br
   br
 #markdown-help(style='display:none')
