--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -209,6 +209,11 @@ a
     position absolute
     top 5px
     right 5px
+.deletetext
+    cursor pointer
+    position absolute
+    top 5px
+    right 5px
 .removeradio
     cursor pointer
     position absolute
@@ -353,6 +358,9 @@ span#controls
 .selected
     border-color #f00
     border solid
+.selectedtext
+    border-color #f00
+    border solid
 .stack
     position relative
     overflow hidden
@@ -384,11 +392,13 @@ span#controls
     text-align center
     margin-top 10px
 #texts
+    margin-top -15px
     width 50%
     float right
     clear both
 .txt
     background-image url("/static/img/paper/Texture0213.jpg")
+    position relative
     color #006
 @media screen and (max-width: 450px)
     .caseListTitle
