before pushing new textboxes

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -182,7 +182,6 @@ th.sorted-desc
 .control
     cursor pointer 
     margin 0 10px
-    z-index 10000
 button
     height 21px
     vertical-align top
@@ -210,6 +209,8 @@ a
     position absolute
     top 5px
     right 5px
+.text
+    position relative
 .deletetext
     cursor pointer
     position absolute
@@ -401,6 +402,10 @@ span#controls
     background-image url("/static/img/paper/Texture0213.jpg")
     position relative
     color #006
+.caption>.control
+    position absolute
+    right 0
+    bottom 0
 .txt>.control
     position absolute
     right 0
