--- a/views/imagepage.jade
+++ b/views/imagepage.jade
@@ -57,7 +57,7 @@ a#nextpage(href='/case/#{cid}/#{nextpage}')
   img.control#addstack(style='display:none', src='/static/ico/plus.png')
 #markdown-help(style='display:none')
   img.control.textedit.session(src='/static/ico/pencil.png')
-  img.control.control.Cancel(src='/static/ico/cross-circle.png')
+  img.control.Cancel(src='/static/ico/cross-circle.png')
   textarea.mdtxt(style='display:none')
     #{mdhelp}
   .md
