--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,8 +14,8 @@ html
     script(src = '/static/js/jquery.mousewheel.min.js')
     script(src = '/static/js/Markdown.Converter.js')
     script(src = '/static/js/Markdown.Sanitizer.js')
-    script(src = '/static/js/client.js')
     //script(src = 'http://localhost:8124/debug.js')
+    != js('client')
   body
     #wrap
       #sl
