--- a/views/standardpage.jade
+++ b/views/standardpage.jade
@@ -45,18 +45,18 @@ a#nextpage(href='/case/#{cid}/#{nextpage}', pageno='#{nextpage}')
 #texts
   - each t, i in texts
     br
-    #text
+    .text
       a.toggletext  
         .txt
           textarea.mdtxt(style='display:none')
-            Toggle textarea
+            #{t.caption} 
           .md
           img.control.textedit.session(src='/static/ico/pencil_bw.png')
+        img.control.deletetext.session(style='display:none', src='/static/ico/cross_bw.png')
       .txt.invisible
         textarea.mdtxt(style='display:none')
-          #{t}
+          #{t.val}
         .md
-        img.control.deletetext.session(style='display:none', src='/static/ico/cross_bw.png')
         br
         img.control.textedit.session(src='/static/ico/pencil_bw.png')
   br
@@ -73,7 +73,7 @@ a#nextpage(href='/case/#{cid}/#{nextpage}', pageno='#{nextpage}')
         textarea.mdtxt(style='display:none')
           #{r.caption}
         .md
-        img.control.textedit(src='/static/ico/pencil_bw.png')
+        img.control.textedit.session(src='/static/ico/pencil_bw.png')
       br
   img.control#addstack(style='display:none', src='/static/ico/plus_bw.png')
   #markdown-help(style='display:none')
